--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "2.1.2",
     "expo": "~53.0.22",
     "expo-status-bar": "~2.2.3",
     "lucide-react-native": "^0.542.0",
     "react": "19.0.0",
     "react-native": "0.79.6",
-    "react-native-svg": "15.11.2",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "react-native-svg": "15.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
